--- a/Framework.ipynb
+++ b/Framework.ipynb
@@ -55,19 +55,19 @@
         "Cumulative sum methods are used to detect the slow and drastic changes in the mean value of a quantity of interest. This method is used in many application it includes monitor the changes in the production environment, disease expectation, fish populations, deforestation and crime analysis. This paper uses cumulative sum method to monitor the changes in the climate. Taylor has developed the change point analysis method with the help of cumulative sum charts (CUSUM) and bootstrapping analysis methods. CUSUM control chart can be calculated as follows:\n",
         "\n",
         "Calculate the average for ‘n’ data points\n",
-        " X1, X2, …, Xn, by the following equation:                              \n",
-        "` X = X1+X2+…+Xn`\n",
+        " $X_1, X_2, …, X_n$, by the following equation:                              \n",
+        "$\\bar X = \\frac {X_1+X_2+…+X_n}{n}$\n",
         "\n",
         "The cumulative sum value SI is calculated based on the following equation:\n",
-        "`SI=Si−1+(Xi−X)fori=1,2,…,n       `                                        Where,\n",
-        "S0=0\n",
+        "$SI=S_{i−1}+(X_i−\\bar X)for \\space i=1,2,…,n$                              Where,\n",
+        "$S_0=0$\n",
         "\n",
         "Calculate the maximum and minimum Smax and Smin, by the following equation\n",
-        "`Smax= maxi=0,1,…,n Si`\n",
-        "`Smin= mini=0,1,…,n Si`\n",
+        "$S_{max}= max_{i=0,1,…,n} S_i$\n",
+        "$S_{min}= min_{i=0,1,…,n}S_i$\n",
         "\n",
         "Calculate the Sdiff Values to find the changes in cumulative sum value SI, by the following equation:\n",
-        "`Sdiff=Smax−Smin`"
+        "$S_{diff}=S_{max}−S_{min}$"
       ]
     },
     {
@@ -80,24 +80,24 @@
         "# Bootstrap analysis method\n",
         "Cumulative sum method is used to find noticeable shift or change in the average. However, the bootstrap analysis is an additional metric used to determine the significant changes calculated by randomly reordering the original ‘n’ values. This bootstrap analysis is used to verify the changes initially calculated from the cumulative sum value SI. The confidence level is calculated for the bootstrap analysis results. A single bootstrap consists of the following steps:\n",
         "\n",
-        "Step 1: Reorder the original ‘n’ values X01, X02, …, X0n using sampling without replacement method.\n",
+        "Step 1: Reorder the original ‘n’ values $X^0_1, X^0_2, …, X^0_n$ using sampling without replacement method.\n",
         "\n",
-        "Step 2: Calculate the cumulative sum values S00, S01, …, S0n.\n",
+        "Step 2: Calculate the cumulative sum values $S^0_0, S^0_1, …, S^0_n$.\n",
         "\n",
-        "Step 3: Calculate the maximum, minimum and difference S0max, S0min, and S0diff values.\n",
+        "Step 3: Calculate the maximum, minimum and difference $S^0_{max}, S^0_{min}, and \\space S^0_{diff}$ values.\n",
         "\n",
-        "Step 4: Identify the bootstrap difference S0diff is less than the original difference Sdiff.\n",
+        "Step 4: Identify the bootstrap difference $S^0_{diff}$ is less than the original difference $S_{diff}$.\n",
         "\n",
         "The vital role of the bootstrap analysis is to identify the significant level of the cumulative sum results if no change has occurred. Number of bootstrap analyses is performed to calculate the confidence level of the changes\n",
         "\n",
         "Confidence level CI can be calculated, by the following equation\n",
-        "```\n",
-        "ConfidenceLevel(CI)=100*X/N\n",
-        "```\n",
+        "\n",
+        "$ConfidenceLevel(CI)=100*X/N$\n",
+        "\n",
         "Where,\n",
         "N = Number of bootstrap samples performed\n",
         "\n",
-        "X = Number of bootstraps for which S0diff < Sdiff\n"
+        "X = Number of bootstraps for which $S^0_{diff} < S_{diff}$\n"
       ]
     }
   ]
